crates/requirements-txt/src/snapshots/requirements_txt__test__parse-basic.txt.snap
---
source: crates/requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxt {
    requirements: [
        RequirementEntry {
            requirement: Uv(
                Requirement {
                    name: PackageName(
                        "numpy",
                    ),
                    extras: [],
                    marker: None,
                    source: Registry {
                        version: VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "1.24.2",
                                },
                            ],
                        ),
                        index: None,
                    },
                },
            ),
            hashes: [],
        },
        RequirementEntry {
            requirement: Uv(
                Requirement {
                    name: PackageName(
                        "pandas",
                    ),
                    extras: [],
                    marker: None,
                    source: Registry {
                        version: VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "2.0.0",
                                },
                            ],
                        ),
                        index: None,
                    },
                },
            ),
            hashes: [],
        },
        RequirementEntry {
            requirement: Uv(
                Requirement {
                    name: PackageName(
                        "python-dateutil",
                    ),
                    extras: [],
                    marker: None,
                    source: Registry {
                        version: VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "2.8.2",
                                },
                            ],
                        ),
                        index: None,
                    },
                },
            ),
            hashes: [],
        },
        RequirementEntry {
            requirement: Uv(
                Requirement {
                    name: PackageName(
                        "pytz",
                    ),
                    extras: [],
                    marker: None,
                    source: Registry {
                        version: VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "2023.3",
                                },
                            ],
                        ),
                        index: None,
                    },
                },
            ),
            hashes: [],
        },
        RequirementEntry {
            requirement: Uv(
                Requirement {
                    name: PackageName(
                        "six",
                    ),
                    extras: [],
                    marker: None,
                    source: Registry {
                        version: VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "1.16.0",
                                },
                            ],
                        ),
                        index: None,
                    },
                },
            ),
            hashes: [],
        },
        RequirementEntry {
            requirement: Uv(
                Requirement {
                    name: PackageName(
                        "tzdata",
                    ),
                    extras: [],
                    marker: None,
                    source: Registry {
                        version: VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "2023.3",
                                },
                            ],
                        ),
                        index: None,
                    },
                },
            ),
            hashes: [],
        },
    ],
    constraints: [],
    editables: [],
    index_url: None,
    extra_index_urls: [],
    find_links: [],
    no_index: false,
    no_binary: None,
    only_binary: None,
}
