crates/requirements-txt/src/snapshots/requirements_txt__test__parse-constraints-a.txt.snap
---
source: crates/requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxt {
    requirements: [
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "django-debug-toolbar",
                    ),
                    extras: [],
                    version_or_url: Some(
                        VersionSpecifier(
                            VersionSpecifiers(
                                [
                                    VersionSpecifier {
                                        operator: LessThan,
                                        version: "2.2",
                                    },
                                ],
                            ),
                        ),
                    ),
                    marker: None,
                    path: Some(
                        "<REQUIREMENTS_DIR>constraints-a.txt",
                    ),
                },
            ),
            hashes: [],
            path: Some(
                "<REQUIREMENTS_DIR>constraints-a.txt",
            ),
        },
    ],
    constraints: [
        Requirement {
            name: PackageName(
                "django",
            ),
            extras: [],
            version_or_url: Some(
                VersionSpecifier(
                    VersionSpecifiers(
                        [
                            VersionSpecifier {
                                operator: Equal,
                                version: "2.1.15",
                            },
                        ],
                    ),
                ),
            ),
            marker: None,
            path: Some(
                "<REQUIREMENTS_DIR>constraints-b.txt",
            ),
        },
        Requirement {
            name: PackageName(
                "pytz",
            ),
            extras: [],
            version_or_url: Some(
                VersionSpecifier(
                    VersionSpecifiers(
                        [
                            VersionSpecifier {
                                operator: Equal,
                                version: "2023.3",
                            },
                        ],
                    ),
                ),
            ),
            marker: None,
            path: Some(
                "<REQUIREMENTS_DIR>constraints-b.txt",
            ),
        },
    ],
    editables: [],
    index_url: None,
    extra_index_urls: [],
    find_links: [],
    no_index: false,
    no_binary: None,
    only_binary: None,
}
