crates/requirements-txt/src/snapshots/requirements_txt__test__parse-constraints-b.txt.snap
---
source: crates/requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxt {
    requirements: [
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "django",
                    ),
                    extras: [],
                    version_or_url: Some(
                        VersionSpecifier(
                            VersionSpecifiers(
                                [
                                    VersionSpecifier {
                                        operator: Equal,
                                        version: "2.1.15",
                                    },
                                ],
                            ),
                        ),
                    ),
                    marker: None,
                    source: Some(
                        "<REQUIREMENTS_DIR>/constraints-b.txt",
                    ),
                },
            ),
            hashes: [],
            path: Some(
                "<REQUIREMENTS_DIR>/constraints-b.txt",
            ),
        },
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "pytz",
                    ),
                    extras: [],
                    version_or_url: Some(
                        VersionSpecifier(
                            VersionSpecifiers(
                                [
                                    VersionSpecifier {
                                        operator: Equal,
                                        version: "2023.3",
                                    },
                                ],
                            ),
                        ),
                    ),
                    marker: None,
                    source: Some(
                        "<REQUIREMENTS_DIR>/constraints-b.txt",
                    ),
                },
            ),
            hashes: [],
            path: Some(
                "<REQUIREMENTS_DIR>/constraints-b.txt",
            ),
        },
    ],
    constraints: [],
    editables: [],
    index_url: None,
    extra_index_urls: [],
    find_links: [],
    no_index: false,
    no_binary: None,
    only_binary: None,
}
