crates/requirements-txt/src/snapshots/requirements_txt__test__parse-editable.txt.snap
---
source: crates/requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxt {
    requirements: [],
    constraints: [],
    editables: [
        EditableRequirement {
            url: VerbatimUrl {
                url: Url {
                    scheme: "file",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: None,
                    port: None,
                    path: "/editable",
                    query: None,
                    fragment: None,
                },
                given: Some(
                    "/editable",
                ),
            },
            extras: [
                ExtraName(
                    "d",
                ),
                ExtraName(
                    "dev",
                ),
            ],
            path: "/editable",
            origin: Some(
                File(
                    "<REQUIREMENTS_DIR>/editable.txt",
                ),
            ),
        },
        EditableRequirement {
            url: VerbatimUrl {
                url: Url {
                    scheme: "file",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: None,
                    port: None,
                    path: "/editable[d,",
                    query: None,
                    fragment: None,
                },
                given: Some(
                    "/editable[d,",
                ),
            },
            extras: [],
            path: "/editable[d,",
            origin: Some(
                File(
                    "<REQUIREMENTS_DIR>/editable.txt",
                ),
            ),
        },
        EditableRequirement {
            url: VerbatimUrl {
                url: Url {
                    scheme: "file",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: None,
                    port: None,
                    path: "/editable",
                    query: None,
                    fragment: None,
                },
                given: Some(
                    "/editable",
                ),
            },
            extras: [
                ExtraName(
                    "d",
                ),
                ExtraName(
                    "dev",
                ),
            ],
            path: "/editable",
            origin: Some(
                File(
                    "<REQUIREMENTS_DIR>/editable.txt",
                ),
            ),
        },
        EditableRequirement {
            url: VerbatimUrl {
                url: Url {
                    scheme: "file",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: None,
                    port: None,
                    path: "/editable[d,",
                    query: None,
                    fragment: None,
                },
                given: Some(
                    "/editable[d,",
                ),
            },
            extras: [],
            path: "/editable[d,",
            origin: Some(
                File(
                    "<REQUIREMENTS_DIR>/editable.txt",
                ),
            ),
        },
        EditableRequirement {
            url: VerbatimUrl {
                url: Url {
                    scheme: "file",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: None,
                    port: None,
                    path: "/editable",
                    query: None,
                    fragment: None,
                },
                given: Some(
                    "/editable",
                ),
            },
            extras: [],
            path: "/editable",
            origin: Some(
                File(
                    "<REQUIREMENTS_DIR>/editable.txt",
                ),
            ),
        },
        EditableRequirement {
            url: VerbatimUrl {
                url: Url {
                    scheme: "file",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: None,
                    port: None,
                    path: "/editable;",
                    query: None,
                    fragment: None,
                },
                given: Some(
                    "/editable;",
                ),
            },
            extras: [],
            path: "/editable;",
            origin: Some(
                File(
                    "<REQUIREMENTS_DIR>/editable.txt",
                ),
            ),
        },
    ],
    index_url: None,
    extra_index_urls: [],
    find_links: [],
    no_index: false,
    no_binary: None,
    only_binary: None,
}
