crates/requirements-txt/src/snapshots/requirements_txt__test__parse-empty.txt.snap
---
source: crates/requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxt {
    requirements: [],
    constraints: [],
}
