crates/requirements-txt/src/snapshots/requirements_txt__test__parse-for-poetry.txt.snap
---
source: crates/requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxt {
    requirements: [
        RequirementEntry {
            requirement: Pep508(
                Requirement {
                    name: PackageName(
                        "inflection",
                    ),
                    extras: [],
                    version_or_url: Some(
                        VersionSpecifier(
                            VersionSpecifiers(
                                [
                                    VersionSpecifier {
                                        operator: Equal,
                                        version: "0.5.1",
                                    },
                                ],
                            ),
                        ),
                    ),
                    marker: None,
                    path: Some(
                        "<REQUIREMENTS_DIR>/for-poetry.txt",
                    ),
                },
            ),
            hashes: [],
            path: Some(
                "<REQUIREMENTS_DIR>/for-poetry.txt",
            ),
        },
        RequirementEntry {
            requirement: Pep508(
                Requirement {
                    name: PackageName(
                        "upsidedown",
                    ),
                    extras: [],
                    version_or_url: Some(
                        VersionSpecifier(
                            VersionSpecifiers(
                                [
                                    VersionSpecifier {
                                        operator: Equal,
                                        version: "0.4",
                                    },
                                ],
                            ),
                        ),
                    ),
                    marker: None,
                    path: Some(
                        "<REQUIREMENTS_DIR>/for-poetry.txt",
                    ),
                },
            ),
            hashes: [],
            path: Some(
                "<REQUIREMENTS_DIR>/for-poetry.txt",
            ),
        },
        RequirementEntry {
            requirement: Pep508(
                Requirement {
                    name: PackageName(
                        "numpy",
                    ),
                    extras: [],
                    version_or_url: None,
                    marker: None,
                    path: Some(
                        "<REQUIREMENTS_DIR>/for-poetry.txt",
                    ),
                },
            ),
            hashes: [],
            path: Some(
                "<REQUIREMENTS_DIR>/for-poetry.txt",
            ),
        },
        RequirementEntry {
            requirement: Pep508(
                Requirement {
                    name: PackageName(
                        "pandas",
                    ),
                    extras: [
                        ExtraName(
                            "tabulate",
                        ),
                    ],
                    version_or_url: Some(
                        VersionSpecifier(
                            VersionSpecifiers(
                                [
                                    VersionSpecifier {
                                        operator: GreaterThanEqual,
                                        version: "1",
                                    },
                                    VersionSpecifier {
                                        operator: LessThan,
                                        version: "2",
                                    },
                                ],
                            ),
                        ),
                    ),
                    marker: None,
                    path: Some(
                        "<REQUIREMENTS_DIR>/for-poetry.txt",
                    ),
                },
            ),
            hashes: [],
            path: Some(
                "<REQUIREMENTS_DIR>/for-poetry.txt",
            ),
        },
    ],
    constraints: [],
    editables: [],
    index_url: None,
    extra_index_urls: [],
    find_links: [],
    no_index: false,
    no_binary: None,
    only_binary: None,
}
