crates/requirements-txt/src/snapshots/requirements_txt__test__parse-include-a.txt.snap
---
source: crates/requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxt {
    requirements: [
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "tomli",
                    ),
                    extras: [],
                    marker: None,
                    source: Registry {
                        version: VersionSpecifiers(
                            [],
                        ),
                        index: None,
                    },
                },
            ),
            hashes: [],
        },
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "numpy",
                    ),
                    extras: [],
                    marker: None,
                    source: Registry {
                        version: VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "1.24.2",
                                },
                            ],
                        ),
                        index: None,
                    },
                },
            ),
            hashes: [],
        },
    ],
    constraints: [],
    editables: [],
    index_url: None,
    extra_index_urls: [],
    find_links: [],
    no_index: false,
    no_binary: None,
    only_binary: None,
}
