crates/requirements-txt/src/snapshots/requirements_txt__test__parse-poetry-with-hashes.txt.snap
---
source: crates/requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxt {
    requirements: [
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "werkzeug",
                    ),
                    extras: [],
                    marker: Some(
                        And(
                            [
                                Expression(
                                    MarkerExpression {
                                        l_value: MarkerEnvVersion(
                                            PythonVersion,
                                        ),
                                        operator: GreaterEqual,
                                        r_value: QuotedString(
                                            "3.8",
                                        ),
                                    },
                                ),
                                Expression(
                                    MarkerExpression {
                                        l_value: MarkerEnvVersion(
                                            PythonVersion,
                                        ),
                                        operator: LessThan,
                                        r_value: QuotedString(
                                            "4.0",
                                        ),
                                    },
                                ),
                            ],
                        ),
                    ),
                    source: Registry {
                        version: VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "2.2.3",
                                },
                            ],
                        ),
                        index: None,
                    },
                },
            ),
            hashes: [
                "sha256:2e1ccc9417d4da358b9de6f174e3ac094391ea1d4fbef2d667865d819dfd0afe",
            ],
        },
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "urllib3",
                    ),
                    extras: [],
                    marker: Some(
                        And(
                            [
                                Expression(
                                    MarkerExpression {
                                        l_value: MarkerEnvVersion(
                                            PythonVersion,
                                        ),
                                        operator: GreaterEqual,
                                        r_value: QuotedString(
                                            "3.8",
                                        ),
                                    },
                                ),
                                Expression(
                                    MarkerExpression {
                                        l_value: MarkerEnvVersion(
                                            PythonVersion,
                                        ),
                                        operator: LessThan,
                                        r_value: QuotedString(
                                            "4",
                                        ),
                                    },
                                ),
                            ],
                        ),
                    ),
                    source: Registry {
                        version: VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "1.26.15",
                                },
                            ],
                        ),
                        index: None,
                    },
                },
            ),
            hashes: [
                "sha256:8a388717b9476f934a21484e8c8e61875ab60644d29b9b39e11e4b9dc1c6b305",
            ],
        },
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "ansicon",
                    ),
                    extras: [],
                    marker: Some(
                        And(
                            [
                                Expression(
                                    MarkerExpression {
                                        l_value: MarkerEnvVersion(
                                            PythonVersion,
                                        ),
                                        operator: GreaterEqual,
                                        r_value: QuotedString(
                                            "3.8",
                                        ),
                                    },
                                ),
                                Expression(
                                    MarkerExpression {
                                        l_value: MarkerEnvVersion(
                                            PythonVersion,
                                        ),
                                        operator: LessThan,
                                        r_value: QuotedString(
                                            "4",
                                        ),
                                    },
                                ),
                                Expression(
                                    MarkerExpression {
                                        l_value: MarkerEnvString(
                                            PlatformSystem,
                                        ),
                                        operator: Equal,
                                        r_value: QuotedString(
                                            "Windows",
                                        ),
                                    },
                                ),
                            ],
                        ),
                    ),
                    source: Registry {
                        version: VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "1.89.0",
                                },
                            ],
                        ),
                        index: None,
                    },
                },
            ),
            hashes: [
                "sha256:e4d039def5768a47e4afec8e89e83ec3ae5a26bf00ad851f914d1240b444d2b1",
            ],
        },
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "requests-oauthlib",
                    ),
                    extras: [],
                    marker: Some(
                        And(
                            [
                                Expression(
                                    MarkerExpression {
                                        l_value: MarkerEnvVersion(
                                            PythonVersion,
                                        ),
                                        operator: GreaterEqual,
                                        r_value: QuotedString(
                                            "3.8",
                                        ),
                                    },
                                ),
                                Expression(
                                    MarkerExpression {
                                        l_value: MarkerEnvVersion(
                                            PythonVersion,
                                        ),
                                        operator: LessThan,
                                        r_value: QuotedString(
                                            "4.0",
                                        ),
                                    },
                                ),
                            ],
                        ),
                    ),
                    source: Registry {
                        version: VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "1.3.1",
                                },
                            ],
                        ),
                        index: None,
                    },
                },
            ),
            hashes: [
                "sha256:2577c501a2fb8d05a304c09d090d6e47c306fef15809d102b327cf8364bddab5",
                "sha256:75beac4a47881eeb94d5ea5d6ad31ef88856affe2332b9aafb52c6452ccf0d7a",
            ],
        },
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "psycopg2",
                    ),
                    extras: [],
                    marker: Some(
                        And(
                            [
                                Expression(
                                    MarkerExpression {
                                        l_value: MarkerEnvVersion(
                                            PythonVersion,
                                        ),
                                        operator: GreaterEqual,
                                        r_value: QuotedString(
                                            "3.8",
                                        ),
                                    },
                                ),
                                Expression(
                                    MarkerExpression {
                                        l_value: MarkerEnvVersion(
                                            PythonVersion,
                                        ),
                                        operator: LessThan,
                                        r_value: QuotedString(
                                            "4.0",
                                        ),
                                    },
                                ),
                            ],
                        ),
                    ),
                    source: Registry {
                        version: VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "2.9.5",
                                },
                            ],
                        ),
                        index: None,
                    },
                },
            ),
            hashes: [
                "sha256:093e3894d2d3c592ab0945d9eba9d139c139664dcf83a1c440b8a7aa9bb21955",
                "sha256:190d51e8c1b25a47484e52a79638a8182451d6f6dff99f26ad9bd81e5359a0fa",
                "sha256:1a5c7d7d577e0eabfcf15eb87d1e19314c8c4f0e722a301f98e0e3a65e238b4e",
                "sha256:1e5a38aa85bd660c53947bd28aeaafb6a97d70423606f1ccb044a03a1203fe4a",
            ],
        },
    ],
    constraints: [],
    editables: [],
    index_url: None,
    extra_index_urls: [],
    find_links: [],
    no_index: false,
    no_binary: None,
    only_binary: None,
}
